--- a/themes/theme-mine/layouts/_default/baseof.html
+++ b/themes/theme-mine/layouts/_default/baseof.html
@@ -97,7 +97,7 @@
               if(randflag){
                 return Math.random() - 0.5
               }else{
-                console.log("a", a, "b", b)
+                // console.log("a", a, "b", b)
                 return a.score - b.score
               }
             })
